tienda de libros

--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  },
+  "keywords": [],
+  "description": ""
 }
